--- a/style.css
+++ b/style.css
@@ -1,2 +1,99 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Josefin+Slab:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600;1,700&family=Mulish:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap');
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css)
+
+
+
+*{
+    margin: 0;
+    padding:0;
+}
+
+header{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+
+}
+
+.img-wrapper{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+}
+.img-wrapper img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.2;
+    animation: zoom 20s;
+
+}
+
+.banner{
+    position: absolute;
+    top:30%;
+    left:15%;
+    
+}
+.banner h1{
+    color: #ffffff;
+    font-size: 3.5rem;
+    font-family: "Baloo Da 2", serif;
+    font-weight: 200;
+    text-shadow: .3 rem .4rem 2px rgba(0,0,0,.4);
+    line-height: 3.5rem;
+    margin-bottom: 2rem;
+    animation: moveBanner 1s forwards;
+}
+
+.banner p{
+    font-family: "Josefin Slab", serif;
+    color: #fff;
+    font-size: 2rem;
+    text-shadow: .2rem .2rem rgba(0,0,0, .4);
+    margin-bottom: 2rem;
+    animation: moveBanner 1s forwards;
+
+}
+
+.banner button{
+    font font-family: "Mulish", serif;
+    color:#fff;
+    text-transform:uppercase;
+    letter-spacing: .1rem;
+    background: #FF0099;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #493240, #FF0099);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #493240, #FF0099); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 1rem 3rem;
+    border: none;
+    border-radius: 5px;
+    cursor:pointer;
+    animation: moveBanner 1s forwards;
+}
+
+.banner button:hover{
+    opacity: 0.8;
+    color:black;
+}
+
+@keyframes zoom{
+    0%{
+        transform: scale(1.3);
+        
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+@keyframes moveBanner{
+    0%{
+        transform: translateY(10rems) rotateY(-30deg);        
+    }
+    100%{
+        transform: translateY(0) rotateY(0);
+    }
+}
+
+}
