--- a/style.css
+++ b/style.css
@@ -1,11 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Josefin+Slab:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600;1,700&family=Mulish:ital,wght@0,200;0,300;0,400;1,200;1,300;1,400&display=swap');
-@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css)
-
-
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css);
 
 *{
     margin: 0;
-    padding:0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+}
+
+.root{
+    --font-primary: "Baloo Da 2", serif;
+    --font-secundary:"Josefin Slab", serif;
+    --font-action: "Mulish", serif;
+
+}
+
+.hamburguer{
+    /*background-color: red; */    
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+    
+}
+
+.line{
+    width: 100%;
+    height: .1rem;
+    background-color: #fff;
+    box-shadow: 0.1rem 0.1rem 1px #000;
+
+
 }
 
 header{
@@ -39,7 +70,7 @@ header{
 .banner h1{
     color: #ffffff;
     font-size: 3.5rem;
-    font-family: "Baloo Da 2", serif;
+    font-family: var(--font-primary);
     font-weight: 200;
     text-shadow: .3 rem .4rem 2px rgba(0,0,0,.4);
     line-height: 3.5rem;
@@ -49,7 +80,7 @@ header{
 }
 
 .banner p{
-    font-family: "Josefin Slab", serif;
+    font-family: var(--font-secundary);
     color: #fff;
     font-size: 2rem;
     text-shadow: .2rem .2rem rgba(0,0,0, .4);
@@ -59,8 +90,8 @@ header{
 }
 
 .banner button{
-    font font-family: "Mulish", serif;
-    color:#fff;
+    font-family: var(--font-action);
+    color: #ffffff;
     text-transform:uppercase;
     letter-spacing: .1rem;
     background: #FF0099;  /* fallback for old browsers */
@@ -98,5 +129,53 @@ header{
     }
 }
 
+.sidebar{
+    width: 20rem;
+    height: 100vh;
+    background-color: #fff;
+    position: fixed;
+    top:0;
+    right: 0;
 
+}
+
+
+.menu{
+    position: absolute;
+    top: 40%;
+    left:50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.menu-item{
+    text-align: center;
+    margin-bottom: .4rem;
+}
+
+.menu-link{
+    font-family: var(--font-action);
+    font-size: 2rem;
+    color: #555;
+    transition: color 1s;
+}
+
+.menu-link:hover{
+    color: rgb(102, 9, 121);
+
+}
+
+.social-media{    
+    position: absolute;
+    bottom: 2rem;
+    width:100%;
+    display: flex;
+    justify-content: space-evenly;
+
+}
+
+.social-media i{
+    color:rgb(102, 9, 121);
+    height: 2.5rem;
+    width: 2.5 rem;
 }
